objects/Section_Grade__c.object
<CustomObject>
    <fields>
        <fullName>Alternate_Lang_Comments__c</fullName>
        <label>Alternate Lang Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Calculated_Standard_Grade__c</fullName>
        <label>Calculated Standard Grade</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments_Next_Steps__c</fullName>
        <label>Comments &amp; Next Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Course_Id__c</fullName>
        <formula>CASESAFEID(Student_Section__r.Section__r.Course__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Weighting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course Weighting</label>
        <referenceTo>Course_Weightings__c</referenceTo>
        <relationshipLabel>Section Grades</relationshipLabel>
        <relationshipName>Section_Grades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Hours__c</fullName>
        <formula>Student_Section__r.Section__r.Course__r.Credit_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_No_Credit_Section_Grade__c</fullName>
        <description>If the selected grade scale is Credit/No Credit and the grade average is above passing threshold then they get Credit.  Otherwise they get No Credit.  If it is a different scale the field is blank.</description>
        <formula>IF(AND(TEXT(Student_Section__r.Section__r.Course__r.Grade_Scale__c)= &apos;Credit/No Credit&apos;,  Grade__c &gt;= Student_Section__r.Student__r.Setup__r.Passing_Grade_Threshold__c), &apos;C&apos;, IF(AND(TEXT(Student_Section__r.Section__r.Course__r.Grade_Scale__c)= &apos;Credit/No Credit&apos;, NOT(ISBLANK(Grade__c))),&apos;NC&apos;,&apos;&apos;))</formula>
        <label>Credit/No Credit Section Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Grade_Formula__c</fullName>
        <formula>IF ( ISBLANK(Student_Section__r.Section__r.Course__r.Grade_Scale_Lookup__c) , 
IF ( Grade_Overridden__c ,  Grade_Override__c ,
CASE(TEXT(Student_Section__r.Section__r.Course__r.Grade_Scale__c), &apos;Standard&apos;, TEXT(Standard_Section_Grade_v2__c), &apos;Credit/No Credit&apos;, Credit_No_Credit_Section_Grade__c,  Letter_Grade__c)),
Letter_Grade__c)</formula>
        <label>Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Show_in_PGV__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NYC functionality to control the ability for a teacher to determine if a section_grade__c comment is visible within the PGV (Parent Guardian View) on the Gradebook_SG_Comments.page</description>
        <label>Do Not Show in PGV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPA_Added_Value_Points__c</fullName>
        <formula>Student_Section__r.Section__r.Course__r.GPA_Added_Value_Points__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GPA Added Value Points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grade_Overridden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be checked if a grade is manually overridden by a user.</description>
        <label>Grade Overridden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grade_Override__c</fullName>
        <inlineHelpText>Acceptable overrides include but are not limited to, 0-100 for Points, C/NC for Credit, 0-4 for Standards, or another letter value (i.e. I, W, N, etc.) as determined by your System Administrator.</inlineHelpText>
        <label>Grade Override</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade_Scale_Category__c</fullName>
        <formula>TEXT( Student_Section__r.Section__r.Course__r.Grade_Scale_Lookup__r.Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grade Scale Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade_Scale_Id__c</fullName>
        <formula>CASESAFEID( Student_Section__r.Section__r.Course__r.Grade_Scale_Lookup__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grade Scale Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade_Scale_Name__c</fullName>
        <formula>Student_Section__r.Section__r.Course__r.Grade_Scale_Lookup__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grade Scale Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade_Scale_RT__c</fullName>
        <formula>Student_Section__r.Section__r.Course__r.Grade_Scale_Lookup__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grade Scale RT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade_Scale__c</fullName>
        <formula>Student_Section__r.Section__r.Course__r.Grade_Scale_Lookup__r.Name</formula>
        <label>Grade Scale</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Holding_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Holding Source</label>
        <referenceTo>HoldingObj__c</referenceTo>
        <relationshipLabel>Section Grades</relationshipLabel>
        <relationshipName>Section_Grades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Combination of Reporting Id and Student Section Id</description>
        <externalId>true</externalId>
        <label>Key</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Letter_Grade__c</fullName>
        <description>Equivalent grade as a Letter</description>
        <label>Letter Grade</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multiply_GPA_Added_Value_Points__c</fullName>
        <formula>Student_Section__r.Section__r.Course__r.Multiply_GPA_Added_Value_Points__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Multiply GPA Added Value Points</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pass_Fail__c</fullName>
        <formula>IF((Grade__c  &gt;= Student_Section__r.Student__r.Setup__r.Passing_Grade_Threshold__c), &quot;Passing&quot;, &quot;Failing&quot;)</formula>
        <label>Passing/Failing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Reference Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Reporting_Period_Name__c</fullName>
        <formula>Time__r.Name__c</formula>
        <label>Reporting Period Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_GPA__c</fullName>
        <label>Section GPA</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Section_Id__c</fullName>
        <formula>CASESAFEID( Student_Section__r.Section__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Section Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_RT__c</fullName>
        <formula>Student_Section__r.Section__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Section RT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Weighted_GPA__c</fullName>
        <label>Section Weighted GPA</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Section</label>
        <referenceTo>Section__c</referenceTo>
        <relationshipLabel>Section Grades</relationshipLabel>
        <relationshipName>Section_Grades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Standard_Section_Grade__c</fullName>
        <formula>IF(NOT(ISBLANK(Grade__c)),IF( Grade__c &gt;=97,4.0,IF(Grade__c&gt;=91,3.5,IF(Grade__c&gt;=85,3.0,IF(Grade__c&gt;=79, 2.5,IF(Grade__c&gt;=73,2.0,IF(Grade__c&gt;=67,1.5,IF(Grade__c&gt;=61,1.0,IF(Grade__c&gt;=55,0.5,0)))))))),NULL)</formula>
        <label>Standard Section Grade</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standard_Section_Grade_v2__c</fullName>
        <formula>IF(NOT(ISBLANK(Grade__c)),
IF(Grade__c &gt;=99.4,4.0, 
IF(Grade__c &gt;=98.2,3.9, 
IF(Grade__c &gt;=97,3.8, 
IF(Grade__c &gt;=95.8,3.7, 
IF(Grade__c &gt;=94.6,3.6, 
IF(Grade__c &gt;=93.4,3.5, 
IF(Grade__c &gt;=92.2,3.4, 
IF(Grade__c &gt;=91,3.3, 
IF(Grade__c &gt;=89.8,3.2, 
IF(Grade__c &gt;=88.6,3.1, 
IF(Grade__c &gt;=87.4,3.0, 
IF(Grade__c &gt;=86.2,2.9, 
IF(Grade__c &gt;=85,2.8, 
IF(Grade__c &gt;=83.8,2.7, 
IF(Grade__c &gt;=82.6,2.6, 
IF(Grade__c &gt;=81.4,2.5, 
IF(Grade__c &gt;=80.2,2.4, 
IF(Grade__c &gt;=79,2.3, 
IF(Grade__c &gt;=77.8,2.2, 
IF(Grade__c &gt;=76.6,2.1, 
IF(Grade__c &gt;=75.4,2.0, 
IF(Grade__c &gt;=74.2,1.9, 
IF(Grade__c &gt;=73,1.8, 
IF(Grade__c &gt;=71.8,1.7, 
IF(Grade__c &gt;=70.6,1.6, 
IF(Grade__c &gt;=69.4,1.5, 
IF(Grade__c &gt;=68.2,1.4, 
IF(Grade__c &gt;=67,1.3, 
IF(Grade__c &gt;=65.8,1.2, 
IF(Grade__c &gt;=64.6,1.1, 
IF(Grade__c &gt;=63.4,1.0, 
IF(Grade__c &gt;=62.2,0.9, 
IF(Grade__c &gt;=61,0.8, 
IF(Grade__c &gt;=59.8,0.7, 
IF(Grade__c &gt;=58.6,0.6, 
IF(Grade__c &gt;=57.4,0.5, 
IF(Grade__c &gt;=56.2,0.4, 
IF(Grade__c &gt;=55,0.3, 
IF(Grade__c &gt;=53.8,0.2, 
IF(Grade__c &gt;=52.6,0.1,0)))))))))))))))))))))))))))))))))))))))),NULL)</formula>
        <label>Standard Section Grade</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Student_Id__c</fullName>
        <formula>CASESAFEID( Student_Section__r.Student__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Name_SG__c</fullName>
        <formula>Student_Section__r.Student__r.Name</formula>
        <label>Student Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Section__c</fullName>
        <label>Student/Section</label>
        <referenceTo>Student_Section__c</referenceTo>
        <relationshipLabel>Section Grades</relationshipLabel>
        <relationshipName>Section_Grades</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Teachers__c</fullName>
        <formula>Student_Section__r.Section__r.Teachers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Teachers</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reporting Period</label>
        <referenceTo>Time_Element__c</referenceTo>
        <relationshipLabel>Section Grades</relationshipLabel>
        <relationshipName>Section_Grades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Use_Assignment_Type_Percentages__c</fullName>
        <formula>Student_Section__r.Section__r.Course__r.Use_Assignment_Type_Percentages__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Use Assignment Type Percentages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weighted_Final_Grade__c</fullName>
        <formula>IF( Grade_Overridden__c, 
IF(ISNUMBER(Grade_Override__c), Grade__c * Course_Weighting__r.Weighting__c, null), 
Grade__c * Course_Weighting__r.Weighting__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Final Grade</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isFinal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final?</label>
        <type>Checkbox</type>
    </fields>
    <label>Section Grade</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SECG-{000}</displayFormat>
        <label>Section Grade Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Section Grades</pluralLabel>
    <recordTypes>
        <fullName>Quarter</fullName>
        <active>true</active>
        <description>Differentiate between quarter-based and semester-based sectional grades.</description>
        <label>Quarter</label>
    </recordTypes>
    <recordTypes>
        <fullName>Semester</fullName>
        <active>true</active>
        <label>Semester</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>